err/tictascii.err
Listing '.'...
Listing './bin'...
Compiling './bin/ticli.py'...
***   File "./bin/ticli.py", line 18
    print "Invalid input - please try again"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tictascii'...
Compiling './lib/python3.5/site-packages/tictascii/ticli.py'...
***   File "./lib/python3.5/site-packages/tictascii/ticli.py", line 18
    print "Invalid input - please try again"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tictascii/ticlib'...
Compiling './lib/python3.5/site-packages/tictascii/ticlib/base.py'...
***   File "./lib/python3.5/site-packages/tictascii/ticlib/base.py", line 170
    print "Player", next_player.marker
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tictascii/ticlib/players.py'...
***   File "./lib/python3.5/site-packages/tictascii/ticlib/players.py", line 31
    print "Invalid input for coordinates. Try again."
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tictascii-0.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
